--- a/2syosetu/1fukusyu-no-oltudoaizu-s/fukusyu-no-oltudoaizu-s4.html
+++ b/2syosetu/1fukusyu-no-oltudoaizu-s/fukusyu-no-oltudoaizu-s4.html
@@ -679,6 +679,17 @@ header {
 
 <script type="text/javascript">blogparts={"id":"10533","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
 
+	<br><b><p><font size="5">漫画版↓</font></p></b>
+<br><br>ファンザ 770円
+<br><a href="https://al.dmm.co.jp/?lurl=https%3A%2F%2Fwww.dmm.co.jp%2Fdc%2Fdoujin%2F-%2Fdetail%2F%3D%2Fcid%3Dd_236339%2F&af_id=gesunayakito-005&ch=toolbar&ch_id=text" rel="nofollow">男嫌いの女だけの国でハーレムを 復讐の異色眼兄妹 3話</a>
+<br>DLサイト 770円
+<br><a rel="noopener sponsored" href="https://www.dlsite.com/maniax/dlaf/=/t/n/link/work/aid/gesunayakitori/id/RJ403506.html" target="_blank">男嫌いの女だけの国でハーレムを 復讐の異色眼兄妹 3話</a>	
+<br>無料　線画のみ
+<br><a href="https://gyhentai.com/1manga-home">漫画manga</a>
+<br>上の「漫画manga」をクリック
+
+		
+		
 <br><br><a href="fukusyu-no-oltudoaizu-s3.html"><b><p><font size="5">＜</font></p></b></a>
 <a href="../../fukusyu-no-oltudoaizu-home-s.html"><b><p><font size="5">index</font></p></b></a>
 <a href="fukusyu-no-oltudoaizu-s5.html"><b><p><font size="5">＞</font></p></b></a>
