--- a/1fukusyu-no-oltudoaizu-m1.html
+++ b/1fukusyu-no-oltudoaizu-m1.html
@@ -245,6 +245,8 @@ header {
 <br>DLサイト 880円
 <br><a rel="noopener sponsored" href="https://www.dlsite.com/maniax/dlaf/=/t/n/link/work/aid/gyhentai/id/RJ384292.html" target="_blank">復讐の異色眼兄妹～種付けして完全催眠～ 正義の虐殺と大義の強姦</a>
 
+<br><a href="5osusume-home.html"><b><p><font size="5">おすすめ</font></p></b></a>
+		
 <br><script type="text/javascript">blogparts={"id":"10533","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
 
 <br><a href="1manga-home.html"><b><p><font size="5">index</font></p></b></a>
