--- a/1fukusyu-no-oltudoaizu-m2.html
+++ b/1fukusyu-no-oltudoaizu-m2.html
@@ -217,6 +217,8 @@ header {
 <br>DLサイト 770円
 <br><a rel="noopener sponsored" href="https://www.dlsite.com/maniax/dlaf/=/t/n/link/work/aid/gyhentai/id/RJ390913.html" target="_blank">どすけべな妹と子作りSEX 復讐の異色眼兄妹～種付けして完全催眠～2話</a>
 
+<br><a href="5osusume-home.html"><b><p><font size="5">おすすめ</font></p></b></a>
+
 <br><script type="text/javascript">blogparts={"id":"10533","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
 
 
