--- a/1fukusyu-no-oltudoaizu-m3.html
+++ b/1fukusyu-no-oltudoaizu-m3.html
@@ -240,7 +240,7 @@ header {
 <br>DLサイト 770円
 <br><a rel="noopener sponsored" href="https://www.dlsite.com/maniax/dlaf/=/t/n/link/work/aid/gesunayakitori/id/RJ403506.html" target="_blank">男嫌いの女だけの国でハーレムを 復讐の異色眼兄妹 3話</a>
 
-<br><a href="5osusume-home.html"><b><p><font size="5">おすすめ</font></p></b></a>
+<br><a href="5osusume-home.html">おすすめ</a>
 
 <br><script type="text/javascript">blogparts={"id":"10533","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
 		
