--- a/1fukusyu-no-oltudoaizu-m3.html
+++ b/1fukusyu-no-oltudoaizu-m3.html
@@ -241,8 +241,8 @@ header {
 <br><a rel="noopener sponsored" href="https://www.dlsite.com/maniax/dlaf/=/t/n/link/work/aid/gesunayakitori/id/RJ403506.html" target="_blank">男嫌いの女だけの国でハーレムを 復讐の異色眼兄妹 3話</a>
 
 <br>おすすめ
-<br><a href="fannza-osusume-home.html">おすすめ</a>
-<br><a href="dlsite-doujin.htm">おすすめ</a>
+<br><a href="fannza-osusume-home.html">FANZA</a>
+<br><a href="dlsite-doujin.htm">DLsite</a>
 
 <br><script type="text/javascript">blogparts={"id":"10533","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
 		
