--- a/2syosetu/1fukusyu-no-oltudoaizu-s/fukusyu-no-oltudoaizu-s3.html
+++ b/2syosetu/1fukusyu-no-oltudoaizu-s/fukusyu-no-oltudoaizu-s3.html
@@ -786,7 +786,10 @@ header {
 <br><a href="https://gyhentai.com/1manga-home">漫画manga</a>
 <br>上の「漫画manga」をクリック
 
-		
+<br>おすすめ
+<br><a href="fannza-osusume-home.html">FANZA</a>
+<br><a href="dlsite-doujin.htm">DLsite</a>		
+	
 		
 <br><br><a href="fukusyu-no-oltudoaizu-s2.html"><b><p><font size="5">＜</font></p></b></a>
 <a href="../../fukusyu-no-oltudoaizu-home-s.html"><b><p><font size="5">index</font></p></b></a>
