--- a/3irasuto-home.html
+++ b/3irasuto-home.html
@@ -135,10 +135,9 @@ header {
     	<div class="main-contents">
 <br><br><br><br><br><br><br>
 <b><p><font size="5">イラスト</font></p></b>
-<img src="3irasuto/irasuto (1).jpg"width=: auto; height=93% alt="イラスト">
-<img src="3irasuto/irasuto (2).jpg"width=: auto; height=93% alt="イラスト">
-<img src="3irasuto/irasuto (3).jpg"width=: auto; height=93% alt="イラスト">
-<img src="3irasuto/irasuto (4).jpg"width=: auto; height=93% alt="イラスト">
+<a href="irasuto-orizinal-home.html"><b><p><font size="5">オリジナル</font></p></b></a>
+<br><a href="irasuto-nizi-home.html"><b><p><font size="5">二次創作</font></p></b></a>
+
 
 
 <br><script type="text/javascript">blogparts={"id":"9119","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
