--- a/irasuto-nizi-home.html
+++ b/irasuto-nizi-home.html
@@ -135,6 +135,9 @@ header {
     	<div class="main-contents">
 <br><br><br><br><br><br><br>
 <b><p><font size="5">二次創作イラスト</font></p></b>
+		
+		
+<script type="text/javascript">blogparts={"id":"11013","ssl":"0"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>	
 
 <b><p><font size="3">アルトリア・ペンドラゴン　壁尻</font></p></b>
 <img src="3irasuto/nizi (1).jpg"width=: auto; height=93% alt="Fate/GrandOrder">
