--- a/irasuto-nizi-home.html
+++ b/irasuto-nizi-home.html
@@ -138,7 +138,9 @@ header {
 		
 		
 <script type="text/javascript">blogparts={"id":"11013","ssl":"0"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>	
-
+		
+<br><ins class="dmm-widget-placement" data-id="ed4e551276e48e240052d5439c0235f0" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="ed4e551276e48e240052d5439c0235f0"></script>
+		
 <b><p><font size="3">アルトリア・ペンドラゴン　壁尻</font></p></b>
 <img src="3irasuto/nizi (1).jpg"width=: auto; height=93% alt="Fate/GrandOrder">
 
