--- a/1manga-home.html
+++ b/1manga-home.html
@@ -147,6 +147,11 @@ header {
 
 <a href="1fukusyu-no-oltudoaizu-m3.html"><img src="1manga/1fukusyu-no-oltudoaizu-m/1fukusyu-no-oltudoaizu-m1/fot3 (1).jpg"width=: auto; height=100% alt="漫画"></a>
 
+<br><ins class="dmm-widget-placement" data-id="3cda52cd0cd767be452c3f1498fc710a" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="3cda52cd0cd767be452c3f1498fc710a"></script>
+		
+		
+<a href="1fukusyu-no-oltudoaizu-m4.html"><img src="1manga/1fukusyu-no-oltudoaizu-m/1fukusyu-no-oltudoaizu-m1/fot4 (1).jpg"width=: auto; height=100% alt="漫画"></a>
+
 
 
 
