--- a/1fukusyu-no-oltudoaizu-m5.html
+++ b/1fukusyu-no-oltudoaizu-m5.html
@@ -283,7 +283,7 @@ header {
 
 <ins class="dmm-widget-placement" data-id="3cda52cd0cd767be452c3f1498fc710a" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="3cda52cd0cd767be452c3f1498fc710a"></script>	
 		
-<br><b><p><font size="5">完全版↓</font></p></b>
+<br><b><p><font size="5">完全版7月3日発売↓</font></p></b>
 <br><br>ファンザ 1100円
 <br><a href="https://al.dmm.co.jp/?lurl=https%3A%2F%2Fwww.dmm.co.jp%2Fdc%2Fdoujin%2F-%2Fdetail%2F%3D%2Fcid%3Dd_280189%2F&af_id=gesunayakito-005&ch=toolbar&ch_id=text" rel="nofollow">ペットのしつけ方 復讐の異色眼兄妹～種付けして完全催眠～5話</a>
 <br>DLサイト 1100円
