--- a/1manga-home.html
+++ b/1manga-home.html
@@ -137,23 +137,27 @@ header {
 
 <b><p><font size="5">漫画</font></p></b>
 		
-<a href="1fukusyu-no-oltudoaizu-m1.html"><img src="1manga/1fukusyu-no-oltudoaizu-m/1fukusyu-no-oltudoaizu-m1/fot1 (1).jpg"width=: auto; height=100% alt="漫画"></a>
+<a href="1fukusyu-no-oltudoaizu-m1.html"><img src="1manga/1fukusyu-no-oltudoaizu-m/1fukusyu-no-oltudoaizu-m1/fot1 (1).jpg"width=: auto; height=100% alt="正義の虐殺と大義の強姦"></a>
 		
 <br><ins class="dmm-widget-placement" data-id="3cda52cd0cd767be452c3f1498fc710a" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="3cda52cd0cd767be452c3f1498fc710a"></script>
 
-<a href="1fukusyu-no-oltudoaizu-m2.html"><img src="1manga/1fukusyu-no-oltudoaizu-m/1fukusyu-no-oltudoaizu-m1/fot2 (1).jpg"width=: auto; height=100% alt="漫画"></a>
+<a href="1fukusyu-no-oltudoaizu-m2.html"><img src="1manga/1fukusyu-no-oltudoaizu-m/1fukusyu-no-oltudoaizu-m1/fot2 (1).jpg"width=: auto; height=100% alt="どすけべな妹と子作りSEX"></a>
 		
 <script type="text/javascript">blogparts={"id":"9300","ssl":"0"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
 
-<a href="1fukusyu-no-oltudoaizu-m3.html"><img src="1manga/1fukusyu-no-oltudoaizu-m/1fukusyu-no-oltudoaizu-m1/fot3 (1).jpg"width=: auto; height=100% alt="漫画"></a>
+<a href="1fukusyu-no-oltudoaizu-m3.html"><img src="1manga/1fukusyu-no-oltudoaizu-m/1fukusyu-no-oltudoaizu-m1/fot3 (1).jpg"width=: auto; height=100% alt="男嫌いの女だけの国でハーレムを"></a>
 
 <br><ins class="dmm-widget-placement" data-id="3cda52cd0cd767be452c3f1498fc710a" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="3cda52cd0cd767be452c3f1498fc710a"></script>
 		
 		
-<a href="1fukusyu-no-oltudoaizu-m4.html"><img src="1manga/1fukusyu-no-oltudoaizu-m/1fukusyu-no-oltudoaizu-m1/fot4 (1).jpg"width=: auto; height=100% alt="漫画"></a>
+<a href="1fukusyu-no-oltudoaizu-m4.html"><img src="1manga/1fukusyu-no-oltudoaizu-m/1fukusyu-no-oltudoaizu-m1/fot4 (1).jpg"width=: auto; height=100% alt="肉体改造と母娘と"></a>
 
+<script type="text/javascript">blogparts={"id":"9300","ssl":"0"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
 
+<a href="1fukusyu-no-oltudoaizu-m5.html"><img src="1manga/1fukusyu-no-oltudoaizu-m/1fukusyu-no-oltudoaizu-m1/fot5 (1).jpg"width=: auto; height=100% alt="ペットのしつけ方"></a>
 
+<br><ins class="dmm-widget-placement" data-id="3cda52cd0cd767be452c3f1498fc710a" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="3cda52cd0cd767be452c3f1498fc710a"></script>
+		
 
 <br><script type="text/javascript">blogparts={"id":"9119","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
 <br><ins class="dmm-widget-placement" data-id="6cbef7d6231c7a26b128547456d25f3a" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="6cbef7d6231c7a26b128547456d25f3a"></script>
