--- a/index.html
+++ b/index.html
@@ -4,36 +4,7 @@
     <title>ゲ砂焼き鳥の無料エロ同人 変態性癖暴露室ahentai　adoujin</title>
 
 
-<!-- global navigation menu page top -->
 
-<ul class="navi-top">
-   <li><a href="home.html">home</a></li>
-   <li><a href="1manga-home.html">漫画</a></li>
-   <li><a href="2syosetu-home.html">小説</a></li>
-   <li><a href="3irasuto-home.html">イラスト</a></li>
-   <li><a href="4syouhin-home.html">商品</a></li>
-   <li><a href="5osusume-home.html">おすすめ</a></li>   
-　　<li><a href="6profile-home.html">プロフィール</a></li>  
-    <li><a href="https://twitter.com/gesunayakitori?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-size="large" data-show-screen-name="false" data-show-count="false">Follow @gesunayakitori</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-
-</ul>
-<!-- global navigation menu page top -->
-
-<ul class="navi-top">
-   <li><a href="home.html">home</a></li>
-   <li><a href="1manga-home.html">漫画</a>
-   </li>
-   <li><a href="2syosetu-home.html">小説</a>
-   </li>
-   <li><a href="3irasuto-home.html">イラスト</a></li>
- <li><a href="4syouhin-home.html">商品</a>
-   </li>
-   <li><a href="5osusume-home.html">おすすめ</a>
-   </li>
-   <li><a href="6profile-home.html">プロフィール</a></li> 
-   <li><a href="https://twitter.com/gesunayakitori?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-size="large" data-show-screen-name="false" data-show-count="false">Follow @gesunayakitori</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-
-</ul> 
 
 
  <style>
@@ -95,8 +66,6 @@ ul.navi-top li:hover ul {
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <header>
-    <li><a href="home.html"><h1 class="title">ゲ砂焼き鳥の無料エロ同人</h1></a></li>
 
     <nav class="nav">
 
@@ -129,120 +98,25 @@ header {
 
 
  <div class="header">
-<script type="text/javascript">blogparts={"id":"9300","ssl":"0"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
     </div>
 
     <div class="main">
     	<div class="main-contents">
 <br><br><br><br><br><br><br>
 
-<a href="1manga-home.html"><img src="img/manga.jpg"width=: auto; height=100% alt="漫画"></a>
-<a href="2syosetu-home.html"><img src="img/syosetu.jpg"width=: auto; height=100% alt="小説"></a>
-<a href="3irasuto-home.html"><img src="img/irasuto.jpg"width=: auto; height=100% alt="イラスト"></a>
-<a href="4syouhin-home.html"><img src="img/syouhin.jpg"width=: auto; height=100% alt="商品"></a>
-<a href="5osusume-home.html"><img src="img/osusume.jpg"width=: auto; height=100% alt="おすすめ"></a>
-<a href="6profile-home.html"><img src="img/profile.jpg"width=: auto; height=100% alt="プロフィール"></a>
+<b><p><font size="6">あなたは18歳以上ですか？</font></p></b>
 
 
-<br>
-<script type="text/javascript">blogparts={"id":"9119","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
-<br><ins class="dmm-widget-placement" data-id="7eeca661d333bb5d0be5edc8bce00dd5" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="7eeca661d333bb5d0be5edc8bce00dd5"></script>
-<br><ins class="dmm-widget-placement" data-id="6283c11b8c45990f98e15a54f1821fd5" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="6283c11b8c45990f98e15a54f1821fd5"></script>
-<br>
-<script type="text/javascript">blogparts={"id":"9948","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
-<br>
-<script type="text/javascript">blogparts={"id":"9333","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
-		
+<a href="home.html"><img src="img/yes.jpg"width=: auto; height=100% alt="はい"></a>
+<a href="https://"><img src="img/no.jpg"width=: auto; height=100% alt="いいえ"></a>
+
+
+
+
 		
       </div>
 	    
-    <div class="right-navi">
-<br><br><br><br><br><br><br>
-<ins class="dmm-widget-placement" data-id="0dbcce87ce4ba1f9cf3e4825f19dfca2" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="0dbcce87ce4ba1f9cf3e4825f19dfca2"></script>
-<br>
-<ins class="dmm-widget-placement" data-id="bb7f1c75c3bd7f4992fdffbbd49bf9fc" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="bb7f1c75c3bd7f4992fdffbbd49bf9fc"></script>
-<br>
-<ins class="dmm-widget-placement" data-id="52be861b5418ccad2ccd6d25803e93cc" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="52be861b5418ccad2ccd6d25803e93cc"></script>
-<br>
-<ins class="dmm-widget-placement" data-id="039f5348a4a99a409f332cff5d159292" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="039f5348a4a99a409f332cff5d159292"></script>
-<br>
-<ins class="dmm-widget-placement" data-id="45033d5581a5d6ceb3dc3362d358c21c" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="45033d5581a5d6ceb3dc3362d358c21c"></script>
-<br>
-<ins class="dmm-widget-placement" data-id="d09ad5ea08b50864fad0d011dc055332" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="d09ad5ea08b50864fad0d011dc055332"></script>
-<br>
-<ins class="dmm-widget-placement" data-id="2c508ec1c75e6b028e7a240b4fd49a70" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="2c508ec1c75e6b028e7a240b4fd49a70"></script>
-<br>
-<ins class="dmm-widget-placement" data-id="9fad09af4822c46c60d51d34dd81f85d" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="9fad09af4822c46c60d51d34dd81f85d"></script>
-<br>
-<ins class="dmm-widget-placement" data-id="bce0e0cf16578d6b560ad27982764c2c" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="bce0e0cf16578d6b560ad27982764c2c"></script>
-<br>
-<ins class="dmm-widget-placement" data-id="be9ea53166683d69e3cab8e647afb4c1" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="be9ea53166683d69e3cab8e647afb4c1"></script>
-<br>
-<ins class="dmm-widget-placement" data-id="3397671c7695073fe0bf999d024ff900" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="3397671c7695073fe0bf999d024ff900"></script>
-<br>
-<ins class="dmm-widget-placement" data-id="4726217b157753d7fa82e324762b6c91" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="4726217b157753d7fa82e324762b6c91"></script>
-<br>
-<ins class="dmm-widget-placement" data-id="c79dec5f1b90a85aee22af1aa1b4a665" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="c79dec5f1b90a85aee22af1aa1b4a665"></script>
-<br>
-<ins class="dmm-widget-placement" data-id="a3719545d4e80f92c05d81cb283b4469" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="a3719545d4e80f92c05d81cb283b4469"></script>
-<br>
-<ins class="dmm-widget-placement" data-id="1370a6e3259989a92c851211cfab1258" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="1370a6e3259989a92c851211cfab1258"></script>
-<br>
-<ins class="dmm-widget-placement" data-id="37ec656f0d12b39cf7e3828ed5f0927e" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="37ec656f0d12b39cf7e3828ed5f0927e"></script>
-<br>
-<ins class="dmm-widget-placement" data-id="8fa8522fc3a7ae90a86297edf0e72c0f" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="8fa8522fc3a7ae90a86297edf0e72c0f"></script>
-<br>
-<ins class="dmm-widget-placement" data-id="fbfcee7ad10efadcf703ab25cf5708f7" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="fbfcee7ad10efadcf703ab25cf5708f7"></script>
-<br>
-<ins class="dmm-widget-placement" data-id="c129e92c3a1c16f0b44196d9d4f8b020" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="c129e92c3a1c16f0b44196d9d4f8b020"></script>
-<br>
-<ins class="dmm-widget-placement" data-id="43443ffc66d27f795f348455231a8297" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="43443ffc66d27f795f348455231a8297"></script>
-<br>
-<ins class="dmm-widget-placement" data-id="757d59e77321618149b57d6178c3e1fd" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="757d59e77321618149b57d6178c3e1fd"></script>
-<br>
-<ins class="dmm-widget-placement" data-id="29d266aad458587d9bbf5fe4f31bc30f" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="29d266aad458587d9bbf5fe4f31bc30f"></script>
-<br>
-<ins class="dmm-widget-placement" data-id="725c25c18b53527b6fdbe37809a75caa" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="725c25c18b53527b6fdbe37809a75caa"></script>
-<br>
-<ins class="dmm-widget-placement" data-id="68caea14e24933486fa14aaccdb52115" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="68caea14e24933486fa14aaccdb52115"></script>
-<br>
-<ins class="dmm-widget-placement" data-id="107f828911b7350e5ed8a72e82e2edc9" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="107f828911b7350e5ed8a72e82e2edc9"></script>
-<br>
-<ins class="dmm-widget-placement" data-id="b52cdef8d8829fe24a0ef2b65c796b71" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="b52cdef8d8829fe24a0ef2b65c796b71"></script>
-<br>
-<ins class="dmm-widget-placement" data-id="d10a0714e83232396d26d9ed95520efb" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="d10a0714e83232396d26d9ed95520efb"></script>
-<br>
-<ins class="dmm-widget-placement" data-id="e73cf48bd4b218c9dbdef0e3645cc9d2" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="e73cf48bd4b218c9dbdef0e3645cc9d2"></script>
-<br>
-<ins class="dmm-widget-placement" data-id="4ca0b5b8e0f84256e2ef05d630487184" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="4ca0b5b8e0f84256e2ef05d630487184"></script>
-<br>
-<ins class="dmm-widget-placement" data-id="bbf4b1772fe7cffe71293ce34f495cf8" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="bbf4b1772fe7cffe71293ce34f495cf8"></script>
-<br>
-<ins class="dmm-widget-placement" data-id="e5f9739255de803242f2597f1caf572e" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="e5f9739255de803242f2597f1caf572e"></script>
-<br>
-<ins class="dmm-widget-placement" data-id="ef683f8a828b3f3c0e854be6166bf803" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="ef683f8a828b3f3c0e854be6166bf803"></script>
-<br>
-<ins class="dmm-widget-placement" data-id="27ca93e6c0aabd8194beb738aa99fd09" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="27ca93e6c0aabd8194beb738aa99fd09"></script>
-<br>
-<ins class="dmm-widget-placement" data-id="e725de164a019ca38e9ae0b1eddd7592" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="e725de164a019ca38e9ae0b1eddd7592"></script>
-<br>
-<ins class="dmm-widget-placement" data-id="66269b2caecabc70eeb7327cd738428d" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="66269b2caecabc70eeb7327cd738428d"></script>
-<br>
-<ins class="dmm-widget-placement" data-id="4116e3cbcb76906ae1be294854fc1c42" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="4116e3cbcb76906ae1be294854fc1c42"></script>
-<br>
-<ins class="dmm-widget-placement" data-id="d5def96faae6b90cd71f8949b12675c2" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="d5def96faae6b90cd71f8949b12675c2"></script>
-<br>
-<ins class="dmm-widget-placement" data-id="11f4aadc5f9c2cace54cfce6f664e5e9" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="11f4aadc5f9c2cace54cfce6f664e5e9"></script>
-<br>
-<ins class="dmm-widget-placement" data-id="e46626485e7588dc15c6a79809be4553" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="e46626485e7588dc15c6a79809be4553"></script>
-<br>
-<ins class="dmm-widget-placement" data-id="ba871c30bbc9fb846d2cc1b14ca177bf" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="ba871c30bbc9fb846d2cc1b14ca177bf"></script>
-      </div>
-
-    </div>
-    <div class="left-navi">
-<br><br><br><br><br><br><br><ins class="dmm-widget-placement" data-id="5a8617fbf1ddc1ac92df2029af846b90" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="5a8617fbf1ddc1ac92df2029af846b90"></script><br><ins class="dmm-widget-placement" data-id="0b09ef1b7ce23c3ca178c7b5e6565037" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="0b09ef1b7ce23c3ca178c7b5e6565037"></script><br><ins class="dmm-widget-placement" data-id="72a850df7fe4d121dba7edc8434c1ad3" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="72a850df7fe4d121dba7edc8434c1ad3"></script><br><ins class="dmm-widget-placement" data-id="6947219c0086ddad1cebc38095776d40" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="6947219c0086ddad1cebc38095776d40"></script>
-    </div>
+ 
 
 
     <div class="footer">
