--- a/index.html
+++ b/index.html
@@ -107,8 +107,8 @@ header {
 <b><p><font size="6">あなたは18歳以上ですか？</font></p></b>
 
 
-<a href="home.html"><img src="img/yes.jpg"width=: auto; height=100% alt="はい"></a>
-<a href="https://"><img src="img/no.jpg"width=: auto; height=100% alt="いいえ"></a>
+<a href="home.html"><img src="img/yes.jpg"width=: auto; height=50% alt="はい"></a>
+<a href="https://"><img src="♯"width=: auto; height=50% alt="いいえ"></a>
 
 
 
