--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@ header {
 
 
 <a href="home.html"><img src="img/yes.jpg"width=: auto; height=50% alt="はい"></a>
-<a href="https://"><img src="♯"width=: auto; height=50% alt="いいえ"></a>
+<a href="♯"><img src="img/no.jpg"width=: auto; height=50% alt="いいえ"></a>
 
 
 
