--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@ header {
 
 
 <a href="home.html"><img src="img/yes.jpg"width=: auto; height=50% alt="はい"></a>
-<a href="♯"><img src="img/no.jpg"width=: auto; height=50% alt="いいえ"></a>
+<a href="https://www.bing.com/search?q=gyhentai&refig=ac1ba47419504a4ba926883e7210a5eb&FPIG=F19A95EE1C0A4595AF946A23A718F41B&first=11&FORM=PERE"><img src="img/no.jpg"width=: auto; height=50% alt="いいえ"></a>
 
 
 
