--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@ header {
 
 
 <a href="home.html"><img src="img/yes.jpg"width=: auto; height=50% alt="はい"></a>
-<a href="https://www.bing.com/search?q=gyhentai&refig=ac1ba47419504a4ba926883e7210a5eb&FPIG=F19A95EE1C0A4595AF946A23A718F41B&first=11&FORM=PERE"><img src="img/no.jpg"width=: auto; height=50% alt="いいえ"></a>
+<a href="https://www.google.com/search?q=gyhentai&bih=860&biw=1054&hl=ja&sxsrf=AB5stBgtgB9BL6QNq-LpuMcHr2fHf9CFMQ%3A1688214887286&ei=Zx2gZIKDEYKN2roPyMmW0Ak&ved=0ahUKEwjC0qTFwu3_AhWChlYBHcikBZoQ4dUDCBA&uact=5&oq=gyhentai&gs_lcp=Cgxnd3Mtd2l6LXNlcnAQA0oECEEYAVAAWABgthFoAXAAeACAAQCIAQCSAQCYAQDAAQE&sclient=gws-wiz-serp"><img src="img/no.jpg"width=: auto; height=50% alt="いいえ"></a>
 
 
 
