--- a/1fukusyu-no-oltudoaizu-m5.html
+++ b/1fukusyu-no-oltudoaizu-m5.html
@@ -189,8 +189,9 @@ header {
 <ins class="dmm-widget-placement" data-id="3cda52cd0cd767be452c3f1498fc710a" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="3cda52cd0cd767be452c3f1498fc710a"></script>
 		
 <img src="1manga/1fukusyu-no-oltudoaizu-m/1fukusyu-no-oltudoaizu-m1/fot5 (1).jpg"width=: auto; height=93% alt="スト">
-<img src="1manga/1fukusyu-no-oltudoaizu-m/1fukusyu-no-oltudoaizu-m1/fot1 (2).jpg"width=: auto; height=93% alt="イト">
-<img src="1manga/1fukusyu-no-oltudoaizu-m/1fukusyu-no-oltudoaizu-m1/fot1 (60).jpg"width=: auto; height=93% alt="イラスト">		
+<img src="1manga/1fukusyu-no-oltudoaizu-m/1fukusyu-no-oltudoaizu-m1/fot1 (2).jpg"width=: auto; height=93% alt="固定">
+<img src="1manga/1fukusyu-no-oltudoaizu-m/1fukusyu-no-oltudoaizu-m1/fot1 (60).jpg"width=: auto; height=93% alt="固定">	
+<img src="1manga/1fukusyu-no-oltudoaizu-m/1fukusyu-no-oltudoaizu-m1/fot5 (2).jpg"width=: auto; height=93% alt="イト">		
 <img src="1manga/1fukusyu-no-oltudoaizu-m/1fukusyu-no-oltudoaizu-m1/fot5 (3).jpg"width=: auto; height=93% alt="イラスト">
 <img src="1manga/1fukusyu-no-oltudoaizu-m/1fukusyu-no-oltudoaizu-m1/fot5 (4).jpg"width=: auto; height=93% alt="イラスト">
 		
