--- a/1fukusyu-no-oltudoaizu-m4.html
+++ b/1fukusyu-no-oltudoaizu-m4.html
@@ -168,7 +168,8 @@ header {
 		
 <img src="1manga/1fukusyu-no-oltudoaizu-m/1fukusyu-no-oltudoaizu-m1/fot4 (1).jpg"width=: auto; height=93% alt="スト">
 <img src="1manga/1fukusyu-no-oltudoaizu-m/1fukusyu-no-oltudoaizu-m1/fot1 (2).jpg"width=: auto; height=93% alt="イト">
-<img src="1manga/1fukusyu-no-oltudoaizu-m/1fukusyu-no-oltudoaizu-m1/fot1 (60).jpg"width=: auto; height=93% alt="イラスト">		
+<img src="1manga/1fukusyu-no-oltudoaizu-m/1fukusyu-no-oltudoaizu-m1/fot1 (60).jpg"width=: auto; height=93% alt="イラスト">	
+<img src="1manga/1fukusyu-no-oltudoaizu-m/1fukusyu-no-oltudoaizu-m1/fot4 (2).jpg"width=: auto; height=93% alt="イト">
 <img src="1manga/1fukusyu-no-oltudoaizu-m/1fukusyu-no-oltudoaizu-m1/fot4 (3).jpg"width=: auto; height=93% alt="イラスト">
 <img src="1manga/1fukusyu-no-oltudoaizu-m/1fukusyu-no-oltudoaizu-m1/fot4 (4).jpg"width=: auto; height=93% alt="イラスト">
 		
