--- a/fukusyu-no-oltudoaizu-home-s.html
+++ b/fukusyu-no-oltudoaizu-home-s.html
@@ -200,7 +200,16 @@ header {
 <br><a href="2syosetu/1fukusyu-no-oltudoaizu-s/fukusyu-no-oltudoaizu-s49.html"><b><p><font size="5">49話 大好きな妹メイドとのえっち 〜おにぃちゃんの心は私だけのものだよ〜</font></p></b></a>
 <br><a href="2syosetu/1fukusyu-no-oltudoaizu-s/fukusyu-no-oltudoaizu-s50.html"><b><p><font size="5">50話 姉弟と純白騎士団長</font></p></b></a>
 <br><a href="2syosetu/1fukusyu-no-oltudoaizu-s/fukusyu-no-oltudoaizu-s51.html"><b><p><font size="5">51話 リオ(妹)に女装お姉ちゃんにさせられ尻穴を突かれるsmプレイ(♡2)</font></p></b></a>
+<br><a href="2syosetu/1fukusyu-no-oltudoaizu-s/fukusyu-no-oltudoaizu-s52.html"><b><p><font size="5">52話 海賊の勧誘〜集え監獄島アルカナドラーズ(※注意※男の娘sexシーン)</font></p></b></a>		
+<br><a href="2syosetu/1fukusyu-no-oltudoaizu-s/fukusyu-no-oltudoaizu-s53.html"><b><p><font size="5">53話 告げるライズ国の戦略と監獄島の真意</font></p></b></a>
+<br><a href="2syosetu/1fukusyu-no-oltudoaizu-s/fukusyu-no-oltudoaizu-s54.html"><b><p><font size="5">54話 俺と褐色ムチムチドMツバサ王とメスクサ剛毛ドSマキシード王のねっとりこってり3Pセックス</font></p></b></a>
+<br><a href="2syosetu/1fukusyu-no-oltudoaizu-s/fukusyu-no-oltudoaizu-s55.html"><b><p><font size="5">55話 王国から同盟国への伝達～ 王国とリベルと そして姉弟側の話（エロ無し）</font></p></b></a>
+<br><a href="2syosetu/1fukusyu-no-oltudoaizu-s/fukusyu-no-oltudoaizu-s56.html"><b><p><font size="5">56話 海賊の島「カルトゥーガ」と帝国の船と新兵器と</font></p></b></a>
+<br><a href="2syosetu/1fukusyu-no-oltudoaizu-s/fukusyu-no-oltudoaizu-s57.html"><b><p><font size="5">57話 船長室で雌王2匹のお散歩と躾と(乱暴sm)</font></p></b></a>
 
+
+
+		
 <br><script type="text/javascript">blogparts={"id":"9119","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
 <br><ins class="dmm-widget-placement" data-id="7eeca661d333bb5d0be5edc8bce00dd5" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="7eeca661d333bb5d0be5edc8bce00dd5"></script>
 <br><ins class="dmm-widget-placement" data-id="6283c11b8c45990f98e15a54f1821fd5" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="6283c11b8c45990f98e15a54f1821fd5"></script>
