--- a/3irasuto-home.html
+++ b/3irasuto-home.html
@@ -134,9 +134,9 @@ header {
     <div class="main">
     	<div class="main-contents">
 <br><br><br><br><br><br><br>
-<b><p><font size="5">イラスト</font></p></b>
-<a href="irasuto-orizinal-home.html"><b><p><font size="5">オリジナル</font></p></b></a>
-<br><a href="irasuto-nizi-home.html"><b><p><font size="5">二次創作</font></p></b></a>
+<b><p><font size="5">メス豚の調教日記（準備中）</font></p></b>
+<a href="irasuto-orizinal-home.html"><b><p><font size="5">オリジナル　original</font></p></b></a>
+<br><a href="irasuto-nizi-home.html"><b><p><font size="5">二次創作　fan fiction</font></p></b></a>
 
 
 
