--- a/1manga-home.html
+++ b/1manga-home.html
@@ -135,7 +135,7 @@ header {
     	<div class="main-contents">
         <br><br><br><br><br><br><br>
 
-<b><p><font size="5">漫画</font></p></b>
+<b><p><font size="5">漫画（↓表紙をタッチしてくださいtouch the cover）</font></p></b>
 		
 <a href="1fukusyu-no-oltudoaizu-m1.html"><img src="1manga/1fukusyu-no-oltudoaizu-m/1fukusyu-no-oltudoaizu-m1/fot1 (1).jpg"width=: auto; height=100% alt="正義の虐殺と大義の強姦"></a>
 		
