--- a/irasuto-orizinal-home.html
+++ b/irasuto-orizinal-home.html
@@ -134,16 +134,16 @@ header {
     <div class="main">
     	<div class="main-contents">
 <br><br><br><br><br><br><br>
-<b><p><font size="5">メス豚一覧（顔写真で移動）（↓表紙をタッチしてくださいtouch the cover）</font></p></b>
-<a href="3oeimesu-1.html"><img src="3irasuto/orimesu (1).jpg"width=: auto; height=100% alt="淫乱メス豚りんこ"></a>
+<b><p><font size="5">メス豚一覧（顔写真で移動）</font></p></b>
+<a href="3orimesu-1.html"><img src="3irasuto/orimesu (1).jpg"width=: auto; height=100% alt="淫乱メス豚りんこ"></a>
 
 <br><ins class="dmm-widget-placement" data-id="3cda52cd0cd767be452c3f1498fc710a" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="3cda52cd0cd767be452c3f1498fc710a"></script>
 
-<a href="3oeimesu-2.html"><img src="3irasuto/orimesu (2).jpg"width=: auto; height=100% alt="淫乱メス豚友美"></a>
+<a href="3orimesu-2.html"><img src="3irasuto/orimesu (2).jpg"width=: auto; height=100% alt="淫乱メス豚友美"></a>
 
 <br><script type="text/javascript">blogparts={"id":"10533","ssl":"0"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
 
-<a href="3oeimesu-3.html"><img src="3irasuto/orimesu (3).jpg"width=: auto; height=100% alt="淫乱メス豚軽子"></a>
+<a href="3orimesu-3.html"><img src="3irasuto/orimesu (3).jpg"width=: auto; height=100% alt="淫乱メス豚軽子"></a>
 
 <br><ins class="dmm-widget-placement" data-id="efb82a7f40a112f7069de71b1242e33f" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="efb82a7f40a112f7069de71b1242e33f"></script>
 
