--- a/irasuto-nizi-home.html
+++ b/irasuto-nizi-home.html
@@ -134,30 +134,12 @@ header {
     <div class="main">
     	<div class="main-contents">
 <br><br><br><br><br><br><br>
-<b><p><font size="5">二次創作イラスト</font></p></b>
-		
-		
-<script type="text/javascript">blogparts={"id":"11013","ssl":"0"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>	
-		
-<br><ins class="dmm-widget-placement" data-id="ed4e551276e48e240052d5439c0235f0" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="ed4e551276e48e240052d5439c0235f0"></script>
-		
-<b><p><font size="3">アルトリア・ペンドラゴン　壁尻</font></p></b>
-<img src="3irasuto/nizi (1).jpg"width=: auto; height=93% alt="Fate/GrandOrder">
 
-<br><ins class="dmm-widget-placement" data-id="3cda52cd0cd767be452c3f1498fc710a" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="3cda52cd0cd767be452c3f1498fc710a"></script>
+<b><p><font size="5">メス豚一覧（顔写真で移動）</font></p></b>
+<a href="3nizimesu-1.html"><img src="3irasuto/nizimesu (1).jpg"width=: auto; height=100% alt="博麗霊夢"></a>	
 
-<b><p><font size="3">モルガン(Fate)　壁尻</font></p></b>
-<img src="3irasuto/nizi (2).jpg"width=: auto; height=93% alt="Fate/staynight">
+<a href="3nizimesu-2.html"><img src="3irasuto/nizimesu (2).jpg"width=: auto; height=100% alt="マシュキリエライト"></a>		
 
-<br><script type="text/javascript">blogparts={"id":"10533","ssl":"0"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
-
-<b><p><font size="3">沖田総司(Fate)　壁尻</font></p></b>
-<img src="3irasuto/nizi (3).jpg"width=: auto; height=93% alt="イラスト">
-
-<br><ins class="dmm-widget-placement" data-id="efb82a7f40a112f7069de71b1242e33f" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="efb82a7f40a112f7069de71b1242e33f"></script>
-
-<b><p><font size="3">源頼光(Fate)　壁尻</font></p></b>
-<img src="3irasuto/nizi (4).jpg"width=: auto; height=93% alt="イラスト">
 
 
 <br><script type="text/javascript">blogparts={"id":"9119","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
