--- a/irasuto-nizi-home.html
+++ b/irasuto-nizi-home.html
@@ -136,7 +136,7 @@ header {
 <br><br><br><br><br><br><br>
 
 <b><p><font size="5">メス豚一覧（顔写真で移動）</font></p></b>
-<a href="3nizimesu-1.html"><img src="3irasuto/nizimesu (1).jpg"width=: auto; height=100% alt="博麗霊夢"></a>	
+<a href="3orimesu-1.html"><img src="3irasuto/nizimesu (1).jpg"width=: auto; height=100% alt="博麗霊夢"></a>	
 
 <a href="3nizimesu-2.html"><img src="3irasuto/nizimesu (2).jpg"width=: auto; height=100% alt="マシュキリエライト"></a>		
 
