--- a/3nizimesu-1.html
+++ b/3nizimesu-1.html
@@ -135,11 +135,11 @@ header {
     	<div class="main-contents">
 <br><br><br><br><br><br><br>
 <b><p><font size="5">博麗霊夢 </font></p></b>
-<img src="3irasuto/nizimesu (1).jpg"width=: auto; height=93% alt="博麗霊夢">
+<img src="3irasuto/nizimesu (1).png"width=: auto; height=93% alt="博麗霊夢">
 
 <b><p><font size="５">○月〇日</font></p></b>
 <br>したこと　やったこと
-<video src="3irasuto/nizimesu1no1.mp4"loop autoplay muted width=: auto; height=93% alt="博麗霊夢">
+<video src="3irasuto/nizimesu1no1.mp4"loop autoplay  alt="博麗霊夢">
 
 
 
