--- a/3nizimesu-1.html
+++ b/3nizimesu-1.html
@@ -139,7 +139,7 @@ header {
 
 <b><p><font size="５">○月〇日</font></p></b>
 <br>したこと　やったこと
-<video src="3irasuto/nizimesu1no2.mp4"loop autoplay muted width=: auto; height=93% alt="博麗霊夢">
+<br><video src="3irasuto/nizimesu1no2.mp4"loop autoplay muted width=: auto alt="博麗霊夢">
 
 
 
