--- a/3nizimesu-1.html
+++ b/3nizimesu-1.html
@@ -141,6 +141,16 @@ header {
 <br>したこと　やったこと
 <br><video src="3irasuto/nizimesu1no2.mp4"loop autoplay muted width=: auto; height=150%  alt="博麗霊夢">
 
+<br>おすすめ
+<br><a href="fannza-osusume-home.html">FANZA</a>
+<br><a href="dlsite-doujin.htm">DLsite</a>
+
+
+<br><ins class="dmm-widget-placement" data-id="3cda52cd0cd767be452c3f1498fc710a" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="3cda52cd0cd767be452c3f1498fc710a"></script>
+
+<br><script type="text/javascript">blogparts={"id":"10533","ssl":"0"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
+
+<br><script type="text/javascript">blogparts={"id":"9119","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
 
 
 
