--- a/3nizimesu-1.html
+++ b/3nizimesu-1.html
@@ -138,7 +138,7 @@ header {
 <img src="3irasuto/nizimesu (1).png"width=: auto; height=93% alt="博麗霊夢">
 
 <b><p><font size="５">○月〇日</font></p></b>
-<br>したこと　やったこと
+<br>したことと　やったこと
 <br><video src="3irasuto/nizimesu1no2.mp4"loop autoplay muted width=: auto; height=150%  alt="博麗霊夢">
 
 <br>おすすめ
