--- a/3nizimesu-1.html
+++ b/3nizimesu-1.html
@@ -136,6 +136,10 @@ header {
 <br><br><br><br><br><br><br>
 <b><p><font size="5">博麗霊夢 </font></p></b>
 <img src="3irasuto/nizimesu (1).png"width=: auto; height=93% alt="博麗霊夢">
+		
+<b><p><font size="５">○月〇日</font></p></b>
+<br>したことと　やったこと
+<br><video src="3irasuto/nizimesu1no2.mp4"loop autoplay muted width=: auto; height=150%  alt="博麗霊夢"></video>
 
 <br>おすすめ
 <br><a href="fannza-osusume-home.html">FANZA</a>
@@ -146,12 +150,7 @@ header {
 
 <br><script type="text/javascript">blogparts={"id":"10533","ssl":"0"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
 
-<br><script type="text/javascript">blogparts={"id":"9119","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
-		
-<b><p><font size="５">○月〇日</font></p></b>
-<br>したことと　やったこと
-<br><video src="3irasuto/nizimesu1no2.mp4"loop autoplay muted width=: auto; height=150%  alt="博麗霊夢">
-
+<br><script type="text/javascript">blogparts={"id":"9119","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>		
 
 
 
