--- a/3nizimesu-1.html
+++ b/3nizimesu-1.html
@@ -136,6 +136,8 @@ header {
 <br><br><br><br><br><br><br>
 <b><p><font size="5">博麗霊夢 </font></p></b>
 <img src="3irasuto/nizimesu (1).png"width=: auto; height=93% alt="博麗霊夢">
+
+<script type="text/javascript">blogparts={"base":"https://www.dlsite.com/","type":"keyword","site":"maniax","query":{"keyword":"東方|東方Project","order":"release_d","options":[null,"-MEN"]},"title":"東方Projectの作品一覧","display":"horizontal","detail":"1","column":"v","image":"medium","count":"3","wrapper":"1","autorotate":true,"aid":"gyhentai"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
 		
 <b><p><font size="５">○月〇日</font></p></b>
 <br>したことと　やったこと
