--- a/3nizimesu-2.html
+++ b/3nizimesu-2.html
@@ -141,6 +141,8 @@ header {
 <br>したことと　やったこと
 <br><video src="3irasuto/nizimesu2no2.mp4"loop autoplay muted width=: auto; height=150%  alt="マシュキリエライト"></video>
 
+<script type="text/javascript">blogparts={"id":"11013","ssl":"0"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
+		
 <br>おすすめ
 <br><a href="fannza-osusume-home.html">FANZA</a>
 <br><a href="dlsite-doujin.htm">DLsite</a>
