--- a/3nizimesu-1.html
+++ b/3nizimesu-1.html
@@ -139,7 +139,7 @@ header {
 		
 <b><p><font size="５">○月〇日</font></p></b>
 <br>したことと　やったこと
-<br><video src="3irasuto/nizimesu1no2.mp4"loop autoplay muted width=: auto; height=150%  alt="博麗霊夢"></video>
+<br><video src="3irasuto/nizimesu1no2.mp4"loop autoplay oncontextmenu="return false;" muted width=: auto; height=150%  alt="博麗霊夢"></video>
 
 <script type="text/javascript">blogparts={"base":"https://www.dlsite.com/","type":"keyword","site":"maniax","query":{"keyword":"東方|東方Project","order":"release_d","options":[null,"-MEN"]},"title":"東方Projectの作品一覧","display":"horizontal","detail":"1","column":"v","image":"medium","count":"3","wrapper":"1","autorotate":true,"aid":"gyhentai"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>		
 
