--- a/3nizimesu-2.html
+++ b/3nizimesu-2.html
@@ -139,7 +139,7 @@ header {
 		
 <b><p><font size="５">○月〇日</font></p></b>
 <br>したことと　やったこと
-<br><video src="3irasuto/nizimesu2no2.mp4"loop autoplay muted width=: auto; height=150%  alt="マシュキリエライト"></video>
+<br><video src="3irasuto/nizimesu2no2.mp4"loop autoplay oncontextmenu="return false;" muted width=: auto; height=150%  alt="マシュキリエライト"></video>
 
 <script type="text/javascript">blogparts={"id":"11013","ssl":"0"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
 		
