--- a/irasuto-sugoroku.html
+++ b/irasuto-sugoroku.html
@@ -148,7 +148,7 @@ function Saikoro2() {
 
 	let saikoro2 = Math.floor( Math.random() * 3) +1;
 	document.getElementById("kekka2").innerHTML = saikoro2;
-        document.getElementById("sainome2").src= saikoro2 + "ni.jpg";
+        document.getElementById("sainome2").src= saikoro2 + "3irasuto/ni.jpg";
 
 }
 
@@ -159,7 +159,7 @@ function Saikoro2() {
 
 <!-- ↓この下に入力してね！↓ -->
 
-<p><img id="sainome2" src="0ni.jpg" width="auto" height="500％"></p>
+<p><img id="sainome2" src="3irasuto/0ni.jpg" width="auto" height="500％"></p>
 <p><button onclick="Saikoro2();">　日記をめくる　</button></p>
 <p id="kekka2"></p>
 
@@ -184,7 +184,7 @@ function Saikoro3() {
 
 	let saikoro3 = Math.floor( Math.random() * 4) +1;
 	document.getElementById("kekka3").innerHTML = saikoro3;
-        document.getElementById("sainome3").src= saikoro3 + "mesurental.jpg";
+        document.getElementById("sainome3").src= saikoro3 + "3irasuto/mesurental.jpg";
 
 }
 
@@ -195,7 +195,7 @@ function Saikoro3() {
 
 <!-- ↓この下に入力してね！↓ -->
 
-<p><img id="sainome3" src="0mesurental.jpg" width="auto" height="200％"></p>
+<p><img id="sainome3" src="3irasuto/0mesurental.jpg" width="auto" height="200％"></p>
 <p><button onclick="Saikoro3();">　雌豚貸し出し　</button></p>
 <p id="kekka3"></p>
 
