--- a/irasuto-sugoroku.html
+++ b/irasuto-sugoroku.html
@@ -148,7 +148,7 @@ function Saikoro2() {
 
 	let saikoro2 = Math.floor( Math.random() * 3) +1;
 	document.getElementById("kekka2").innerHTML = saikoro2;
-        document.getElementById("sainome2").src= saikoro2 + "3irasuto/ni.jpg";
+        document.getElementById("sainome2").src= saikoro2 + "ni.jpg";
 
 }
 
@@ -184,7 +184,7 @@ function Saikoro3() {
 
 	let saikoro3 = Math.floor( Math.random() * 4) +1;
 	document.getElementById("kekka3").innerHTML = saikoro3;
-        document.getElementById("sainome3").src= saikoro3 + "3irasuto/mesurental.jpg";
+        document.getElementById("sainome3").src= saikoro3 + "mesurental.jpg";
 
 }
 
