--- a/3irasuto/irasuto-sugoroku.html
+++ b/3irasuto/irasuto-sugoroku.html
@@ -159,7 +159,7 @@ function Saikoro2() {
 
 <!-- ↓この下に入力してね！↓ -->
 
-<p><img id="sainome2" src="3irasuto/0ni.jpg" width="auto" height="500％"></p>
+<p><img id="sainome2" src="samune/0ni.jpg" width="auto" height="500％"></p>
 <p><button onclick="Saikoro2();">　日記をめくる　</button></p>
 <p id="kekka2"></p>
 
@@ -195,7 +195,7 @@ function Saikoro3() {
 
 <!-- ↓この下に入力してね！↓ -->
 
-<p><img id="sainome3" src="3irasuto/0mesurental.jpg" width="auto" height="200％"></p>
+<p><img id="sainome3" src="samune/0mesurental.jpg" width="auto" height="200％"></p>
 <p><button onclick="Saikoro3();">　雌豚貸し出し　</button></p>
 <p id="kekka3"></p>
 
