--- a/3irasuto/irasuto-sugoroku.html
+++ b/3irasuto/irasuto-sugoroku.html
@@ -232,7 +232,7 @@ function Saikoro() {
 
 <!-- ↓この下に入力してね！↓ -->
 
-<p><img id="sainome" src="1.jpg" width="50" height="50"></p>
+<p><img id="sainome" src="samune/1.jpg" width="50" height="50"></p>
 <p><button onclick="Saikoro();">　サイコロを振る　</button></p>
 <p id="kekka"></p>
 
