--- a/3irasuto/irasuto-sugoroku.html
+++ b/3irasuto/irasuto-sugoroku.html
@@ -484,7 +484,7 @@ function Saikoro() {
 </html>
 
 
-<br><a href="3orimesu-1.html"><img src="sugorokululu.jpg"width=: auto; height=100% alt="淫乱メス豚りんこ"></a>
+<br><img src="sugorokululu.jpg"width=: auto; height=500% alt="淫乱メス豚りんこ">
 
 <br><ins class="dmm-widget-placement" data-id="3cda52cd0cd767be452c3f1498fc710a" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="3cda52cd0cd767be452c3f1498fc710a"></script>
 
