--- a/irasuto-sugoroku.html
+++ b/irasuto-sugoroku.html
@@ -148,7 +148,7 @@ function Saikoro2() {
 
 	let saikoro2 = Math.floor( Math.random() * 3) +1;
 	document.getElementById("kekka2").innerHTML = saikoro2;
-        document.getElementById("sainome2").src= saikoro2 + "ni.jpg";
+        document.getElementById("sainome2").src= saikoro2 + "niki.jpg";
 
 }
 
