--- a/irasuto-enk.html
+++ b/irasuto-enk.html
@@ -160,7 +160,7 @@ function Saikoro5() {
 
 <!-- ↓この下に入力してね！↓ -->
 
-<p><img id="sainome5" src="5irasuto/0mesurental.jpg" width="auto" height="200％"></p>
+<p><img id="sainome5" src="5irasuto/0mono.jpg" width="auto" height="200％"></p>
 <p><button onclick="Saikoro5();">　道具を替える　</button></p>
 <p id="kekka5"></p>
 
@@ -194,7 +194,7 @@ function Saikoro4() {
 
 <!-- ↓この下に入力してね！↓ -->
 
-<p><img id="sainome4" src="3irasuto/0ni.jpg" width="auto" height="500％"></p>
+<p><img id="sainome4" src="3irasuto/0enk.jpg"||" src="3irasuto/01enk.jpg" width="auto" height="500％"></p>
 <p><button onclick="Saikoro4();">　メス豚を探す　</button></p>
 <p id="kekka4"></p>
 
