--- a/irasuto-enk.html
+++ b/irasuto-enk.html
@@ -194,7 +194,7 @@ function Saikoro4() {
 
 <!-- ↓この下に入力してね！↓ -->
 
-<p><img id="sainome4" src="3irasuto/0enk.jpg"||"3irasuto/0enk.jpg" width="auto" height="500％"></p>
+<p><img id="sainome4" src="3irasuto/0enk.jpg" width="auto" height="500％"></p>
 <p><button onclick="Saikoro4();">　メス豚を探す　</button></p>
 <p id="kekka4"></p>
 
