--- a/home.html
+++ b/home.html
@@ -139,7 +139,7 @@ header {
 
 <a href="1manga-home.html"><img src="img/manga.jpg"width=: auto; height=100% alt="漫画"></a>
 <a href="irasuto-sugoroku.html"><img src="0ni.jpg"width=: auto; height=100% alt="メス豚調教日記"></a>
-<a href="irasuto-dungeon.html"><img src="danjonmogu.jpg"width=: auto; height=100% alt="ダンジョンもぐり"></a>
+<a href="irasuto-dungeon.html"><img src="img/danjonmogu.jpg"width=: auto; height=100% alt="ダンジョンもぐり"></a>
 <a href="2syosetu-home.html"><img src="img/syosetu.jpg"width=: auto; height=100% alt="小説"></a>
 <a href="3irasuto-home.html"><img src="img/irasuto.jpg"width=: auto; height=100% alt="イラスト"></a>
 <a href="4syouhin-home.html"><img src="img/syouhin.jpg"width=: auto; height=100% alt="商品"></a>
