--- a/irasuto-dungeon.html
+++ b/irasuto-dungeon.html
@@ -136,7 +136,7 @@ header {
 <br><br><br><br><br><br><br>
 
 <a href="https://al.dmm.co.jp/?lurl=https%3A%2F%2Fwww.dmm.co.jp%2Fdc%2Fdoujin%2F-%2Fdetail%2F%3D%2Fcid%3Dd_365267zero%2F&af_id=gesunayakito-001&ch=toolbar&ch_id=link"><b><p><font size="5">ダンジョンもぐり（ルール説明など）</font></p></b></a><br>
-
+<a href="https://www.pixiv.net/artworks/117305164"><b><p><font size="5">ダンジョンもぐり（ルール説明などpixiv）</font></p></b></a><br>
 
 
 <b><p><font size="5">ハジマリ町</font></p></b>
@@ -329,7 +329,7 @@ function Saikoro2() {
 <img src="3irasuto/bos1 (1).jpg"width=: auto; height=93% alt="ボス">
 
 <a href="https://al.dmm.co.jp/?lurl=https%3A%2F%2Fwww.dmm.co.jp%2Fdc%2Fdoujin%2F-%2Fdetail%2F%3D%2Fcid%3Dd_365267zero%2F&af_id=gesunayakito-001&ch=toolbar&ch_id=link"><b><p><font size="5">ダンジョンもぐり（ルール説明など）</font></p></b></a><br>
-
+<a href="https://www.pixiv.net/artworks/117305164"><b><p><font size="5">ダンジョンもぐり（ルール説明などpixiv）</font></p></b></a><br>
 
 <br><ins class="dmm-widget-placement" data-id="3cda52cd0cd767be452c3f1498fc710a" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="3cda52cd0cd767be452c3f1498fc710a"></script>
 
