--- a/7fanboxd-home.html
+++ b/7fanboxd-home.html
@@ -318,7 +318,7 @@ $password = $_POST['password'];
 $correct_password = "mypassword";
 
 if ($password == $correct_password) {
-  header("Location: protected_page.html");
+  header("Location: protected_page7fanboxd-home");
 } else {
   echo "Incorrect password!";
 }
