--- a/7fanboxd-home.html
+++ b/7fanboxd-home.html
@@ -305,7 +305,7 @@ background-color: #00FF00; /*緑色*/
 </head>
 <body>
   <form action="7fanboxd-home.html">
-    <input type="password" pattern="mypassword" title="Enter the correct password" required>
+    <input type="password" pattern="5656" title="Enter the correct password" required>
     <input type="submit" value="Submit">
   </form>
 </body>
