--- a/7fanboxd-home.html
+++ b/7fanboxd-home.html
@@ -304,7 +304,7 @@ background-color: #00FF00; /*緑色*/
 <head>
 </head>
 <body>
-  <form action="7fanboxd-home.html">
+  <form action="https://gyhentai.com/7fanboxd-home.html">
     <input type="password" pattern="5656" title="Enter the correct password" required>
     <input type="submit" value="Submit">
   </form>
