--- a/7fanboxd-home.html
+++ b/7fanboxd-home.html
@@ -296,9 +296,10 @@ background-color: #00FF00; /*緑色*/
 }
 }
 
+</style>
 
 
-
+<style>
 <input type="button" value="パスワードを入力して秘密のページへアクセスする" onclick="gate();">
 function gate() {
     var password = prompt("パスワードを入力してください:");
@@ -309,11 +310,11 @@ function gate() {
     }
 }
 
-
-
-
-
 </style>
+
+
+
+	
 
   </head>
   <body>
