--- a/7fanboxd-home.html
+++ b/7fanboxd-home.html
@@ -304,12 +304,13 @@ background-color: #00FF00; /*緑色*/
 <style>
 function gate() {
     var password = prompt("パスワードを入力してください:");
-    if (password == "5656") {
-        window.location.href = "3nizimesu-1.html";
+    if (password == "yourPassword") {
+        window.location.href = "secretPage.html";
     } else {
         alert("パスワードが違います。");
     }
 }
+
 </style>
 
 
