--- a/7fanboxd-home.html
+++ b/7fanboxd-home.html
@@ -312,7 +312,7 @@ background-color: #00FF00; /*緑色*/
 function checkPassword() {
   var password = document.getElementById("password").value;
   if (password == "mypassword") {
-    location.href = "protected_page.html";
+    location.href = "7fanboxd-home.html";
   } else {
     alert("Incorrect password!");
   }
