--- a/7fanboxd-home.html
+++ b/7fanboxd-home.html
@@ -321,7 +321,7 @@ function checkPassword() {
 </head>
 <body>
   <input type="password" id="password">
-  <button onclick="checkPassword()">Submit</button>
+  <button onclick="checkPassword(5656)">Submit</button>
 	
   <body>
 
