--- a/7fanboxd-home.html
+++ b/7fanboxd-home.html
@@ -331,6 +331,6 @@ function checkPassword() {
 </head>
 <body>
   <input type="password" id="password">
-  <button onclick="checkPassword()">Submit</button>
+  <button onclick="checkPassword(112)">Submit</button>
 </body>
 </html>	
