--- a/7fanboxd-home.html
+++ b/7fanboxd-home.html
@@ -319,10 +319,10 @@ background-color: #00FF00; /*緑色*/
 <html>
 <head>
 <script>
-function checkPassword() {
+function checkPassword(112) {
   var password = document.getElementById("password").value;
   if (password == "mypassword") {
-    location.href = "protected_page.html";
+    location.href = "7fanboxd-home.html";
   } else {
     alert("Incorrect password!");
   }
