--- a/irasuto-dungeon.html
+++ b/irasuto-dungeon.html
@@ -143,7 +143,7 @@ header {
 
 <img src="3irasuto/mati1(1).jpg"width=: auto; height=93% alt="ハジマリ町">
 <img src="3irasuto/mati1noaitemu1(1).jpg"width=: auto; height=93% alt="アイテム図鑑">
-
+<img src="3irasuto/mati1kiyo1(1).jpg"width=: auto; height=93% alt="町拠点">
 
 
 
