--- a/1fukusyu-no-oltudoaizu-m5.html
+++ b/1fukusyu-no-oltudoaizu-m5.html
@@ -297,7 +297,8 @@ header {
 <br><script type="text/javascript">blogparts={"id":"10533","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
 		
 <br><br><a href="1fukusyu-no-oltudoaizu-m4.html"><b><p><font size="5">＜</font></p></b></a>
-<a href="1manga-home.html"><b><p><font size="5">index</font></p></b></a>	
+<a href="1manga-home.html"><b><p><font size="5">index</font></p></b></a>
+<a href="1fukusyu-no-oltudoaizu-m6.html"><b><p><font size="5">＞</font></p></b></a>
 		
 <br><script type="text/javascript">blogparts={"id":"9119","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
 <br><ins class="dmm-widget-placement" data-id="3cda52cd0cd767be452c3f1498fc710a" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="3cda52cd0cd767be452c3f1498fc710a"></script>
